--- a/.env_example
+++ b/.env_example
@@ -1,6 +1,7 @@
 PORT=5000
 WSPORT=5001
 DATABASE=/srv/database.sqlite
+MEMBER_ASSET_DATABASE=/srv/assetbase.sqlite
 INIT_INVITE=URMOM
 JWT_SECRET=THISISASECRET
 DISCORD_ID=123123123123123123
