--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "honeycrisp": "^1.0.7",
+    "imgur-anonymous-uploader": "^1.1.6",
     "jimp": "^0.22.12",
     "jose": "^5.2.0",
     "keyv": "^4.5.4",
