docs<*>: update env example

--- a/.env_example
+++ b/.env_example
@@ -6,3 +6,6 @@ INIT_INVITE=URMOM
 JWT_SECRET=THISISASECRET
 DISCORD_ID=123123123123123123
 DISCORD_SECRET=thisIsaVeryCoolSecret22
+IMGUR_ID=1sdfkop32123
+ICE_SECRET=uwusecret
+ICE_URL=turn:example.org:3478
